--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,19 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="trues">
   <ion-toolbar>
-    <ion-title>
-      Tab 2
+    <ion-title color="primary">
+      Mes ordonnances
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<div
+  style="display: flex; align-items: center; justify-content: center; flex-direction: column; height: 100%; width: 100%; overflow: hidden; background-color: whitesmoke;">
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
-</ion-content>
+  <h1>Page "Mes ordonnances"</h1>
+
+  <ion-buttons>
+    <ion-button color="success" fill="solid" size="large" (click)="goAnOtherPage('/tabs/tab2')">Nav Button for tests
+    </ion-button>
+  </ion-buttons>
+  
+</div>
