--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<!-- <ion-tabs>
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
@@ -17,4 +17,30 @@
     </ion-tab-button>
   </ion-tab-bar>
 
-</ion-tabs>
+</ion-tabs> -->
+
+<ion-tabs></ion-tabs>
+
+<ion-menu side="end" content-id="main-content" style="--width: 80vw;">
+  <ion-header>
+    <ion-toolbar translucent>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item (click)="goTo('/tabs/tab1')">
+        <ion-icon name="alarm-outline" slot="start"></ion-icon>
+        <ion-label>Mes Rappels</ion-label>
+      </ion-item>
+      <ion-item (click)="goTo('/tabs/tab2')">
+        <ion-icon name="document" slot="start"></ion-icon>
+        <ion-label>Mes Ordonances</ion-label>
+      </ion-item>
+      <ion-item (click)="goTo('/tabs/tab3')">
+        <ion-icon name="person" slot="start"></ion-icon>
+        <ion-label>Mon Compte</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
