--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,37 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="trues">
   <ion-toolbar>
-    <ion-title>
-      Mes Rappels
-    </ion-title>
+    <ion-icon name="heart" slot="start" style="margin: 0.4em;" size="large"></ion-icon>
+    <ion-buttons slot="end">
+      <ion-menu-button auto-hide="false"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Mes Rappels</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; height: 100%; width: 100%; overflow: hidden;">
 
-  <h1 style="color: white">Page "Mes Rappels"</h1>
+  <h1 style="color: var(--ion-color-dark)">Page "Mes Rappels"</h1>
 
   <ion-buttons>
     <ion-button color="success" fill="solid" size="large" (click)="goAnOtherPage('/tabs/tab2')">Nav Button for tests</ion-button>
   </ion-buttons>
 
-</div>
+</div> -->
+
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-icon name="alarm-outline" slot="start" style="margin: 0.4em;" size="large"></ion-icon>
+      <ion-buttons slot="end">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Mes rappels</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <div id="CONTENT" style="min-height: 100%; width: 100%; display: flex;
+      flex-direction: column; align-items: center; justify-content: center;">
+      <h1>Mes rappels</h1>
+    </div>
+  </ion-content>
+</div>x
