--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -18,6 +18,7 @@
 
         <!-- <ion-item-sliding (click)="selectOrdonnance(ordonnance.id)"> -->
           <ion-item (click)="selectOrdonnance(ordonnance.id)">
+            <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
             <ion-label>
               <h2 style="font-size: large">{{ ordonnance.titre }}</h2>
             </ion-label>
@@ -311,13 +312,13 @@
       </ion-list>
   </ion-content>
 
-  <ion-content *ngIf="checkStep('ordonnance-details')">
+  <!-- <ion-content *ngIf="checkStep('ordonnance-details')" class='animated slideInDown'> -->
+  <ion-content *ngIf="checkStep('ordonnance-details')" class="ordonnance-details">
     <ion-list>
 
-      <ion-item class=' animated fadeIn  delay-0.5s' button>
-      <!-- <ion-item style=' transition: all linear 1s; '> -->
+      <ion-item button (click)="changeStepTo('main')">
         <ion-icon slot="end" name="chevron-back-outline"></ion-icon>
-        <p slot="end" style="padding: 0; margin: 0; font-size: small">Retour</p>
+        <!-- <p slot="end" style="padding: 0; margin: 0; font-size: small">Retour</p> -->
         <ion-label class="ion-text-wrap">
           <h1 style="font-size: x-large">{{ selectedOrdonnance.titre }}</h1>
         </ion-label>
@@ -330,7 +331,7 @@
         </ion-label>
       </ion-item>
 
-      <ion-item>
+      <ion-item> 
         <ion-label class="ion-text-wrap">
           <h2 style="font-size: large">Date de la prescription :</h2>
           <p style="font-size: medium">{{ selectedOrdonnance.dateDebut }}</p>
