--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,13 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  // --ion-color-light: orange;
+  // --ion-color-light-rgb: 255, 165, 0;
+  // --ion-color-light-contrast: orange;
+  // --ion-color-light-contrast-rgb: 255, 165, 0;
+  // --ion-color-light-shade: orange;
+  // --ion-color-light-tint: orange;
 }
 
 // @media (prefers-color-scheme: dark) {
