--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -80,7 +80,7 @@
         </ion-label>
       </ion-item>
 
-      <ion-item *ngIf="selectedOrdonnance.medocs.lenght > 0">
+      <ion-item *ngIf="selectedOrdonnance.medocs.length > 0">
         <ion-label class="ion-text-wrap">
           <h2 style="font-size: large">Médicaments préscrits :</h2>
           <!-- <p style="font-size: medium">{{ selectedOrdonnance.dateFin }}</p> -->
