--- a/src/global.scss
+++ b/src/global.scss
@@ -25,3 +25,6 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+/* Manually imported css */
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
