--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -157,6 +157,14 @@
         </ion-label>
       </ion-item>
 
+      <!-- <ion-item>
+        <ion-label>Couleur du rappel</ion-label>
+        <ion-select [(ngModel)]="gender">
+          <ion-item-option value="#ffffff">White</ion-option>
+          <ion-item-option value="#000000">Black</ion-option>
+        </ion-select>
+      </ion-item> -->
+
       <!-- nom: "MEDOC2-NOM-0047-AAB2",
             nbBoiteMax: 4,
             nbBoiteAchetees: 2,
