--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -17,7 +17,8 @@
     style="animation-duration: 0.5s;">
     <ion-list>
 
-      <div *ngFor="let ordonnance of listeOrdonnances" class="main animated slideInRight" style="animation-duration: 0.5s;">
+      <div *ngFor="let ordonnance of this.gsbMainService.data.ordonnances" class="main animated
+        slideInRight" style="animation-duration: 0.5s;">
         <ion-item (click)="selectOrdonnance(ordonnance.id)">
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
           <ion-label>
@@ -80,7 +81,7 @@
         </ion-label>
       </ion-item>
 
-      <ion-item *ngIf="selectedOrdonnance.medocs.length > 0">
+      <ion-item *ngIf="selectedOrdonnance.medocs.length> 0">
         <ion-label class="ion-text-wrap">
           <h2 style="font-size: large">Médicaments préscrits :</h2>
           <!-- <p style="font-size: medium">{{ selectedOrdonnance.dateFin }}</p> -->
@@ -165,6 +166,24 @@
         </ion-select>
       </ion-item> -->
 
+      <ion-item>
+        <!-- <ion-select interface="popover" [(ngModel)]="selectedMedoc.color">
+          <ion-select-option *ngFor="let couleur of this.gsbMainService.niceColors" value="{{ couleur }}">
+            <ion-icon name="square"></ion-icon>
+          </ion-select-option>
+        </ion-select> -->
+        <div>
+          <h2 style="font-size: large">Couleur du rappel : </h2>
+          <div style="display: flex; flex-flow: row; justify-content: flex-start; align-items: center;">
+            <div *ngFor="let couleur of this.gsbMainService.niceColors">
+              <ion-icon name="square" [ngStyle]="{'color': couleur }" style="font-size: calc(100vw/8);" (click)="selectColor(couleur)"></ion-icon>
+              <ion-icon *ngIf="selectedMedoc.couleur === couleur" name="square-outline" style="font-size: calc(100vw/8); position: relative; margin-left: calc(-100vw/8);"></ion-icon>
+            </div>
+            <!-- <div *ngIf="selectedMedoc.couleur === couleur" style="color: black; position: relative; width: 10px; margin-left: -10px;"> v </div> -->
+          </div>
+        </div>
+      </ion-item>
+
       <!-- nom: "MEDOC2-NOM-0047-AAB2",
             nbBoiteMax: 4,
             nbBoiteAchetees: 2,
@@ -229,7 +248,8 @@
           <ion-textarea style="font-size: medium; margin-bottom: 0.7em;"
             type="text" name="description" auto-grow="true"
             [ngModel]="formSavedOrdonnance.description"
-            placeholder="Cette ordonnance m'a été donnée lors du rendez-vous de mai ..."
+            placeholder="Cette ordonnance m'a été donnée lors du rendez-vous de
+            mai ..."
             ngModel required>
           </ion-textarea>
         </ion-item>
